objects/Invoice_Example__c.object
<CustomObject><fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Balance_Due__c</fullName>
        <formula>Amount__c - (Total_Credit__c  +  Total_Payment__c  +  Total_Write_off__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Billing_Company_Name__c</fullName>
        <label>Billing Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Billing_Contact__c</fullName>
        <label>Billing Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Billing_Language__c</fullName>
        <label>Billing Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Credit_Memo__c</fullName>
        <inlineHelpText>Background from AR if a credit or other issue occured with the invoice.</inlineHelpText>
        <label>Credit Memo</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>External_System_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is the Invoice ID from Accounts Receivable System.</inlineHelpText>
        <label>External System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Indicator__c</fullName>
        <description>This field is an icon that indicates status, tied to the Invoice Status field.</description>
        <formula>IMAGE(URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;CASE( Status__c, 
"Draft", "01541000001Qwue&amp;oid=00D41000001MYfZ", 
"Pending","01541000001Qwug&amp;oid=00D41000001MYfZ", 
"Finalized", "01541000001Qwub&amp;oid=00D41000001MYfZ", 
"Overdue","01541000001Qwuc&amp;oid=00D41000001MYfZ", 
"01541000001Qwub&amp;oid=00D41000001MYfZ"),"Status",24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Email_Date__c</fullName>
        <label>Last Email Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Print_Date__c</fullName>
        <label>Last Print Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>To_Be_Emailed__c</fullName>
        <label>To Be Emailed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>To_Be_Printed__c</fullName>
        <label>To Be Printed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Total_Credit__c</fullName>
        <label>Total Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Write_off__c</fullName>
        <label>Total Write-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>URLsrc__c</fullName>
        <description>This is to ensure that icons show in Salesforce and Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,".force.com"), 
MID( $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)), 
FIND("/", $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))+1) - FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)) 
) , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Invoice</label><nameField>
        <displayFormat>Invoice-{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Invoices</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Balance_Due__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>United_Partners_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Balance_Due__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>United Partners</value>
        </filters>
        <label>United Partners Invoices</label>
        <language>en_US</language>
    </listViews></CustomObject>